# mdbook-fetch

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
src/: lib.rs  main.rs
tests/: integration_test.rs
